# Practic1

./: CMakeLists.txt
include/: inside.h  logic.h  piecewise.h  trigonometry.h
src/: inside.c  logic.c  piecewise.c  trigonometry.c
tests/: inside.tests.cpp  logic.tests.cpp  piecewise.tests.cpp  trigonometry.tests.cpp
